<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher_background">

        <ImageButton
            android:id="@+id/setBackgroundPaintBucket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_paint_bucket"
            android:src="@drawable/ic_format_paint_black_24dp" />

        <ImageButton
            android:id="@+id/setPaintbrushTool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_paintbrush"
            android:src="@drawable/ic_brush_black_24dp" />

        <ImageButton
            android:id="@+id/strokeWidthPlusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_stroke_increase"
            android:src="@drawable/ic_exposure_plus_1_black_24dp" />

        <ImageButton
            android:id="@+id/strokeWidthMinusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_stroke_decrease"
            android:src="@drawable/ic_exposure_neg_1_black_24dp" />

        <ImageButton
            android:id="@+id/undoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_undo"
            android:src="@drawable/ic_undo_black_24dp" />

        <ImageButton
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_clear"
            android:src="@drawable/ic_delete_sweep_black_24dp" />

        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_save"
            android:src="@drawable/ic_save_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/changeColorRedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight=".1"
            android:padding="1dp"
            app:backgroundTint="@color/colorRed" />

        <Button
            android:id="@+id/changeColorOrangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight=".1"
            android:padding="1dp"
            app:backgroundTint="@color/colorOrange" />

        <Button
            android:id="@+id/changeColorYellowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight=".1"
            android:padding="1dp"
            app:backgroundTint="@color/colorYellow" />

        <Button
            android:id="@+id/changeColorGreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight=".1"
            android:padding="1dp"
            app:backgroundTint="@color/colorGreen" />

        <Button
            android:id="@+id/changeColorBlueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight=".1"
            android:padding="1dp"
            app:backgroundTint="@color/colorBlue" />

        <Button
            android:id="@+id/changeColorIndigoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight=".1"
            android:padding="1dp"
            app:backgroundTint="@color/colorIndigo" />

        <Button
            android:id="@+id/changeColorVioletButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight=".1"
            android:padding="1dp"
            app:backgroundTint="@color/colorViolet" />

        <Button
            android:id="@+id/changeColorWhiteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight=".1"
            android:padding="1dp"
            app:backgroundTint="@color/colorWhite" />

        <Button
            android:id="@+id/changeColorGreyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight=".1"
            android:padding="1dp"
            app:backgroundTint="@color/colorGrey" />

        <Button
            android:id="@+id/changeColorBlackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight=".1"
            android:padding="1dp"
            app:backgroundTint="@color/colorBlack" />

    </LinearLayout>

    <me.panavtec.drawableview.DrawableView
        android:id="@+id/paintView"
        android:layout_width="@dimen/bitmap_size"
        android:layout_height="@dimen/bitmap_size"
        android:layout_gravity="top|center"
        android:layout_margin="8dp" />

</LinearLayout>
